WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49374
Web Font specified with base64 data URI ending with EOT is not rendered
https://bugs.webkit.org/show_bug.cgi?id=49374
Summary
Web Font specified with base64 data URI ending with EOT is not rendered
Yuzo Fujishima
Reported
2010-11-11 03:20:07 PST
For example, the following font is mistaken as an Embedded OpenType and ignored. @font-face { font-family: myfont; src:url("data:font/ttf;base64,AAE...EOT"); }
Attachments
Patch
(37.32 KB, patch)
2010-11-11 03:35 PST
,
Yuzo Fujishima
no flags
Details
Formatted Diff
Diff
Use local font for tests
(37.32 KB, patch)
2010-11-11 03:51 PST
,
Yuzo Fujishima
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yuzo Fujishima
Comment 1
2010-11-11 03:35:02 PST
Created
attachment 73594
[details]
Patch
Yuzo Fujishima
Comment 2
2010-11-11 03:51:18 PST
Created
attachment 73596
[details]
Use local font for tests
mitz
Comment 3
2010-11-11 08:05:34 PST
Perhaps we can drop the dot check entirely. Hyatt, what do you think?
mitz
Comment 4
2010-11-11 08:06:05 PST
s/dot/eot/
Yuzo Fujishima
Comment 5
2010-11-21 22:31:21 PST
Ping?
WebKit Commit Bot
Comment 6
2010-11-22 00:24:20 PST
The commit-queue encountered the following flaky tests while processing
attachment 73596
[details]
: http/tests/appcache/credential-url.html fast/workers/storage/use-same-database-in-page-and-workers.html Please file bugs against the tests. These tests were authored by
dumi@chromium.org
and
jchaffraix@webkit.org
. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 7
2010-11-22 00:42:11 PST
Comment on
attachment 73596
[details]
Use local font for tests Clearing flags on attachment: 73596 Committed
r72504
: <
http://trac.webkit.org/changeset/72504
>
WebKit Commit Bot
Comment 8
2010-11-22 00:42:17 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug