2010-11-22  Yuzo Fujishima  <yuzo@google.com>

Reviewed by Dan Bernstein.

        Fix for Bug 49374 - Web Font specified with base64 data URI ending with EOT is not rendered.
        https://bugs.webkit.org/show_bug.cgi?id=49374

        * fast/css/font-face-data-uri-expected.txt: Added.
        * fast/css/font-face-data-uri.html: Added.
2010-11-22  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Dan Bernstein.

        Fix for Bug 49374 - Web Font specified with base64 data URI ending with EOT is not rendered.
        https://bugs.webkit.org/show_bug.cgi?id=49374

        Test: fast/css/font-face-data-uri.html

        * css/CSSFontFaceSrcValue.cpp:
        (WebCore::CSSFontFaceSrcValue::isSupportedFormat): Do not check "file
        extension" for data URI. For other URI, check against ".eot" rather
        than "eot".

Canonical link: https://commits.webkit.org/62966@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72504 268f45cc-cd09-0410-ab3c-d52691b4dbfc